﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version vNext

	New Features:
		-[Core] Container.IsVerifying property added to allow checking if the container is currently verifying
		 its configuration (work item 21014).
		-[Core] Nested types in exception messages are now displayed with a dot instead of a + sign, as C#
		 developers are used to. (work item 21011).

	Improvements/Changes:
		-[WebApi] SimpleInjectorWebApiDependencyResolver.BeginScope will now only create a new execution 
		 context scope in case there is no active scope yet (work item 21015).
		-[Core/Diagnostics] SimpleInjector.Diagnostics.dll merged with core library (work item 21008).


Version 2.7.3 (v2.7.3 RTM) 2015-03-09

	Bug fixes:
		-[Core] DecoratorPredicateContext.ImplementationType returned service type in case the decoratee was
		 not transient or singleton (work item 21012).

	Additions:
		-LifetimeScoping project is now available as PCL package as well (work item 21013).
			

Version 2.7.2 (v2.7.2 RTM) 2015-02-12

	Bug fixes:
		-[Core] Registering collections using RegisterManyForOpenGeneric while supplying RegisterAll as 
		 callback delegate caused duplicate registrations in case a type implemented multiple closed versions
		 of the same abstraction (work item 20996).
		-[Core] Calling RegisterAll many times (i.e. in combination with RegisterManyForOpenGeneric) caused
		 severe performance problems (work item 21001).
		-[Core] The RegisterManyForOpenGeneric overloads that accepted a list of types, did not use the
		 supplied lifestyle correctly, which could cause registrations with a torn lifestyle.
		-[Core] In case the RegisterManyForOpenGeneric overloads that accepted a list of assemblies, registered
		 a type that implemented the given service type multiple times using the singleton lifestyle, it
		 became impossible to apply a decorator to this type (work item 21002).