@@ -1,5 +1,6 @@
 ﻿namespace SimpleInjector.Diagnostics.Tests.Unit
 {
+    using System.Linq;
     using Microsoft.VisualStudio.TestTools.UnitTesting;
     using SimpleInjector.Diagnostics;
     using SimpleInjector.Diagnostics.Analyzers;
@@ -69,6 +70,38 @@
 
             // Assert
             Assert.AreEqual("2 possible lifestyle mismatches for 2 services.", item.Description);
+        }
+
+        [TestMethod]
+        public void Analyze_MismatchWithSuppressDiagnosticWarning_NoWarning()
+        {
+            // Arrange
+            var container = new Container();
+
+            container.Register<IUserRepository, InMemoryUserRepository>();
+
+            var registration = 
+                Lifestyle.Singleton.CreateRegistration<UserServiceBase, RealUserService>(container);
+
+            container.AddRegistration(typeof(UserServiceBase), registration);
+
+            container.Verify();
+
+            registration.SuppressDiagnosticWarning(DiagnosticType.PotentialLifestyleMismatch);
+
+            container.Verify();
+
+            // Act
+            var results = Analyzer.Analyze(container).OfType<PotentialLifestyleMismatchDiagnosticResult>()
+                .ToArray();
+
+            // Assert
+            Assert.AreEqual(0, results.Length, Actual(results));
+        }
+
+        private static string Actual(PotentialLifestyleMismatchDiagnosticResult[] results)
+        {
+            return "actual: " + string.Join(" - ", results.Select(r => r.Description));
         }
     }
 }
