@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2014 Simple Injector Contributors
+ * Copyright (c) 2014-2015 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -71,6 +71,7 @@ namespace SimpleInjector.Diagnostics.Analyzers
             var results =
                 from tornProducerGroup in tornRegistrationGroups
                 from producer in tornProducerGroup
+                where producer.Registration.ShouldNotBeSuppressed(DiagnosticType.TornLifestyle)
                 select CreateDiagnosticResult(
                     diagnosedProducer: producer,
                     affectedProducers: tornProducerGroup);
